--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </div>
         
                              <div class="card" style="width:1000px">
-    <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/S/sgp-catalog-images/region_US/dreamworks-11795-Full-Image_GalleryBackground-en-US-1483994504900._SX1080_.jpg" alt="Card image" style="width:100%" style="height:200%">
+    <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/S/sgp-catalog-images/region_US/dreamworks-11795-Full-Image_GalleryBackground-en-US-1483994504900._SX1080_.jpg" alt="Card image" style="height:78.5%">
     <div class="card-body">
       <h4 class="card-title">Po</h4>
       <p class="card-text">Po from Kung Fu Panda must be Bruce Lee's strongest rival because he can do the Wushi Finger Hold.</p>
